k8s/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: k8s-test-app-service
  
spec:
  selector:
    matchLabels:
      app: k8s-test-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
