k8s/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: k8s-test-app-ingress
  labels:
    app: k8s-test-app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /v1(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: k8s-test-app-service
              port:
                number: 3000
